--- a/tesi1.tex
+++ b/tesi1.tex
@@ -1796,7 +1796,7 @@ On the other hand, if you are developing a business application for a customer y
   \item Support for the application after the release
 \end{itemize}
 
-In order to maintain a solid relationship with your costumer, deadlines must be respected, and here the development of the application comes to play; including security in the development of an application may seems easy at the beginning, but it is not so simple as it may seems and it may cost lots of time, and when there is a deadline the goal is to finish the job, no matter if the application is secure or not.\\
+In order to maintain a solid relationship with your costumer, deadlines must be respected, and here the development of the application comes to play; including security in the development of an application may seems easy at the beginning, but it is not so simple nd it may cost lots of time, and when there is a deadline the goal is to finish the job, no matter if the application is secure or not.\\
 This is one reason why some developers simply avoid security aspect during the development of an application.\\
 
 Another reason is about money: some customers are not interested or not even aware about security issues that an application could have, so they are simply not interested in paying for it, but if a security problem occurs they will surely come yelling at you.\newline
